Fix shadow issue
Shadow applied to the header element was overflowing onto the sidebar
div element. Resolved the issue by creating a new div element to contain
the header and main elements separately from the sidebar div element and
set the overflow property to hidden for this container. Also used the
main element's background color as the container's background color and
made the main element transparent so that the header's shadow is
visible.

--- a/Assets/CSS/index.css
+++ b/Assets/CSS/index.css
@@ -13,15 +13,12 @@ html {
 .main-grid {
     height: 100vh;
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 1fr 4fr;
 }
 
 #sidebar {
     background-color: dodgerblue;
     color: white;
-    grid-column: 1 / 2;
-    grid-row: 1 / 3;
     padding: 10px;
     display: grid;
     grid-template-columns: 100%;
@@ -65,31 +62,37 @@ ul {
     font-weight: bold;
 }
 
+.content-space {
+    height: 100vh;
+    background-color: lightgray;
+    overflow: hidden;
+    display: grid;
+    grid-template-rows: 1fr 5fr;
+}
+
 header {
-    border: 2px solid ghostwhite;
-    grid-column: 2 / 6;
-    grid-row: 1 / 2;
+    background-color: ghostwhite;
     display: grid;
     grid-template-rows: 3fr 5fr;
     padding: 10px 50px;
-    gap: 30px;
-    box-shadow: 50px 50px darkgrey;
+    gap: 10px;
+    align-items: center;
+    box-shadow: 0px 2px 10px darkgray;
 }
 
 .top-header {
     display: grid;
-    grid-template-columns: 2fr 1fr;
-    gap: 75px;
+    grid-template-columns: 3fr 1fr;
+    gap: 50px;
 }
 
 .search-box {
     display: grid;
-    grid-template-columns: 1fr 10fr;
+    grid-template-columns: 1fr 20fr;
 }
 
 .search-box img {
     align-self: center;
-    justify-self: center;
 }
 
 .search-bar {
@@ -101,7 +104,7 @@ header {
 
 .notifications-box {
     display: grid;
-    grid-template-columns: 1fr 1fr 5fr;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center;
     font-size: 0.75rem;
     font-weight: bold;
@@ -111,21 +114,20 @@ header {
     justify-self: center;
 }
 
+.notifications-box > p {
+    justify-self: start;
+}
+
 .mini-profile {
     height: 50px;
     width: 50px;
     border-radius: 50px;
-    justify-self: center;
-}
-
-.notifications-box p {
-    justify-self: center;
 }
 
 .bottom-header {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
+    grid-template-columns: 2fr 1fr;
+    gap: 300px;
 }
 
 .profile-box {
@@ -157,21 +159,59 @@ header {
     grid-template-columns: repeat(3, 1fr);
     gap: 25px;
     align-self: center;
-    justify-self: center;
 }
 
 button {
     background-color: dodgerblue;
     border-radius: 50px;
     color: white;
-    font-size: 1rem;
-    padding: 0.1rem 0.5rem;
+    font-size: 0.55rem;
+    font-weight: bold;
+    padding: 10px 0;
     border: none;
 }
 
 main {
-    background-color: lightgray;
-    grid-column: 2 / 6;
-    grid-row: 2 / 3;
+    background-color: transparent;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    padding: 20px;
 }
 
+main > * {
+    border: 2px dashed blue;
+}
+
+main > * > p:first-child {
+    font-weight: bold;
+    font-size: 0.75rem;
+}
+
+.projects {
+    grid-row: 1 / 3;
+    display: grid;
+    grid-template-rows: 1fr 20fr;
+}
+
+.project-cards {
+    background-color: gray;
+}
+
+.announcements {
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    display: grid;
+    grid-template-rows: 1fr 10fr;
+}
+
+.announcement-list, .trending-list {
+    background-color: white;
+}
+
+.trending {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    display: grid;
+    grid-template-rows: 1fr 10fr;
+}
